<resources>
    <string name="app_name">LANG</string>
    <string name="title_activity_home_page">Anasayfa</string>
    <string name="start_game">Oyuna başla</string>
    <string name="wrong">Yanlış</string>
    <string name="correct">Doğru</string>
    <string name="timer">   </string>
    <string name="score">Skor</string>
    <string name="congratulations">Tebrikler!</string>
    <string name="your_score">Skorun:</string>
    <string name="try_again">Tekrar dene</string>
    <string name="play_again"> Tekrar başla</string>
    <string name="settings">Ayarlar</string>
    <string name="zero">0</string>



    <string-array name="catagory_array">
        <item>FRANSIZCA</item>
        <item>ALMANCA</item>
        <item>İNGİLİZCE</item>
        <item>İTALYANCA</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
